--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -7,30 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="Views\appsettings.Debug.json" />
-    <Content Remove="Views\appsettings.Release.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Views\appsettings.Debug.json">
-      <IsTransformFile>true</IsTransformFile>
-      <DependentUpon>appsettings.json</DependentUpon>
-    </None>
-    <None Include="Views\appsettings.Release.json">
-      <IsTransformFile>true</IsTransformFile>
-      <DependentUpon>appsettings.json</DependentUpon>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="4.0.50">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\..\DeluxeEdit\Constants\Constants.csproj" />
+    <ProjectReference Include="..\VSConfiguratonHelper\VSConfiguratonHelper.csproj" />
   </ItemGroup>
 
   <ItemGroup>
